# cubedb

./: .gitignore  Dockerfile  candidate_events.sql  pyproject.toml
cubedb/: create_dataset.py  create_i3_sets.py  create_master_train_list.py  create_sql_db.py  get_time_interval.py  make_powershovel_dbs.py
cubedb/modules/: helper_functions.py  remove_nc_events.py  save_random_events.py  sqlite_creator.py
retro_data/: muon_stopping_power.csv
shell_scripts/: create_dataset.sh  create_dataset_2.sh  create_i3_sets.sh  create_meta_db.sh  finish_dataset.sh  finish_dataset_2.sh  get_files_from_hep.sh  insert_i3_in_filename.sh
src/: create_sql_db.py  remove_l2_duplicates.py
src/modules/: create_retro_reco_db.py  gcd_to_db.py  helper_functions.py  i3_file_tester.py  remove_test_events_from_db.py  retro_funcs.py  retro_misc.py  retro_utils.py  save_master_train_list_as_csv.py  sqlite_creator.py  sqlite_creator_2.py  sqlite_creator_bjorn_exception.py
src/scripts/: create_dataset.py  create_dataset_2.py  create_i3_sets.py  create_sql_db.py  create_sql_db_2.py  remove_l2_duplicates.py
