[tool.poetry]
name = "cubedb"
version = "2020.10.21"
description = "Databases for IceCube"
authors = ["Mads Ehrhorn <mads.ehrhorn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
numpy = "*"
scikit-learn = "0.22.1"
pyinstrument = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
